# jupyter-offlinenotebook

./: .eslintrc.js  .githubactivity.json  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  dev-requirements-jl2.txt  dev-requirements-jl3.old  dev-requirements-jl3.txt  dev-requirements-jl4.txt  dev-requirements.txt  eslint.config.js  example.ipynb  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: binder-badge.yaml  build.yml  test.yml
binder/: environment.yml  postBuild
jupyter-offlinenotebook/: README.md  package.json  tsconfig.json
jupyter-offlinenotebook/src/: index.ts
jupyter_offlinenotebook/: __init__.py  description.yaml
jupyter_offlinenotebook/etc/: offlinenotebook_jpserverextension.json  offlinenotebook_nbextension.json  offlinenotebook_serverextension.json
jupyter_offlinenotebook/static/: index.ts  main.js  offlinenotebook.d.ts  offlinenotebook.js
jupyter_offlinenotebook/static/jslib/: index.ts  offlinenotebook.d.ts  offlinenotebook.js
src/: index.ts
src/jslib/: offlinenotebook.ts
style/: index.css
tests/: conftest.py  start.sh  test_offlinenotebook.py
